# my_whisper_finetune

./: .gitignore  README.md  custom_train.py  pyproject.toml  train.py  utils.py
